WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295335
structureClone should preserve Error.cause
https://bugs.webkit.org/show_bug.cgi?id=295335
Summary
structureClone should preserve Error.cause
youenn fablet
Reported
2025-07-02 07:52:43 PDT
structuredClone should preserve Error.cause
Attachments
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2025-07-02 07:52:53 PDT
<
rdar://152725880
>
youenn fablet
Comment 2
2025-07-02 07:56:18 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47488
youenn fablet
Comment 3
2025-07-02 07:57:02 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/53540
EWS
Comment 4
2025-07-03 01:35:30 PDT
Committed
296961@main
(8ff4b558a478): <
https://commits.webkit.org/296961@main
> Reviewed commits have been landed. Closing PR #47488 and removing active labels.
Diego Pino
Comment 5
2025-07-03 08:29:06 PDT
Re-opening for pull request
https://github.com/WebKit/WebKit/pull/47552
EWS
Comment 6
2025-07-04 01:30:46 PDT
Committed
297018@main
(1449e9bb8f87): <
https://commits.webkit.org/297018@main
> Reviewed commits have been landed. Closing PR #47552 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug