structuredClone should preserve Error.cause rdar://152725880 https://bugs.webkit.org/show_bug.cgi?id=295335

Reviewed by Justin Michaud.

We add serialization of Error.cause string in SerializedScriptValue.
We update ErrorInstance to allow passing cause as a String.
We update the corresponding WPT test, which already passes on Chrome and Firefox.

* LayoutTests/imported/w3c/web-platform-tests/html/webappapis/structured-clone/structured-clone-battery-of-tests.js:
(compare_Object.async if):
(compare_Object):
* Source/JavaScriptCore/runtime/ErrorInstance.cpp:
(JSC::ErrorInstance::create):
(JSC::ErrorInstance::finishCreation):
* Source/JavaScriptCore/runtime/ErrorInstance.h:
(JSC::ErrorInstance::create):
* Source/WebCore/bindings/js/SerializedScriptValue.cpp:
(WebCore::CloneSerializer::dumpIfTerminal):
(WebCore::CloneDeserializer::readTerminal):
(WebCore::extractErrorInformationFromErrorInstance):
* Source/WebCore/bindings/js/SerializedScriptValue.h:

Canonical link: https://commits.webkit.org/296961@main